<!--
  ~ /**
  ~  * Created by Amil Muhammed Hamza on 12/25/19 9:32 PM
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 12/25/19 8:20 PM
  ~  */
  -->

<resources>
    <string name="app_name">VolunteerX</string>
    <string name="createPing">Create Ping</string>
    <string name="placebo_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="placebo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </string>
    <string name="create_post">Create Post</string>
    <string name="search">Search</string>
    <string name="forums_button">Forums</string>
    <string name="feed_const_terms">Feed</string>


    //CHARACTER
    <string name="animal">Animal Welfare</string>
    <string name="art">Art &amp; Culture</string>
    <string name="children">Children</string>
    <string name="civil">Civil Rights</string>
    <string name="disaster">Disaster Management</string>
    <string name="economic">Economic Empowerment</string>
    <string name="education">Education</string>
    <string name="environment">Environment</string>
    <string name="health">Health</string>
    <string name="human">Human Rights</string>
    <string name="poverty">Poverty Alleviation</string>
    <string name="politics">Politics</string>
    <string name="science">Technology</string>
    <string name="social">Social Services</string>
    <string name="women">Women Welfare</string>

    //CHARACTER DESCRIPTION
    <string name="desc_animal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_art">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_children">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_civil">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_disaster">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_economic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_education">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_environment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_health">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_human">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_poverty">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_politics">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_science">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_social">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_women">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>


    //fragment names
    <string name="gallery_fragment">Photos, Video</string>
    <string name="document_fragment">Document</string>
    <string name="poll_fragment">Poll</string>
    <string name="camera_fragment">Camera</string>
    <string name="forum_info_fargment">ForumInfo</string>
    <string name="advanced_editing_fragment">AdvancedEditingFragment</string>

    //Tabs
    <string name="tab_request">Requests</string>
    <string name="tab_notification">Notifications</string>

    <string name="tab_post">Posts</string>
    <string name="tab_activities">Activities</string>
    <string name="tab_media">Media</string>
    <string name="tab_character">Character</string>

    <string name="tab_ping">Ping</string>
    <string name="tab_people">People</string>

    <string name="tab_document">Document</string>

    <string name="tab_for_you">For you</string>
    <string name="tab_top">Top</string>
    <string name="tab_organisation">Organisation</string>

    //DialogTag
    <string name="dialog_privacy">dialogPrivacy</string>
    <string name="dialog_options">dialogOptions</string>

    //Wizard
    <string name="step_info_1">Select three or more character that represent what you want to follow</string>
    <string name="slash">/</string>
    <string name="new_element">New</string>
    <string name="created_on">Created on</string>
    <string name="joined_by">Joined by</string>
    <string name="members">Members</string>
    <string name="details">Details</string>
    <string name="join">Join</string>
    <string name="ping">PING</string>

    //Post
    <string name="post_bait_text">What\'s new?</string>
    <string name="privacy_heading">Privacy</string>
    <string name="private_privacy">Private</string>
    <string name="public_privacy">Public</string>
    <string name="custom_privacy">Custom</string>
    <string name="horizontal_divider">|</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>
    <string name="forum_room_fragment">ForumRoomFragment</string>
    <string name="forum_info_fragment">ForumInfoFragment</string>
    <string name="report_activity">Report Activity</string>
    <string name="leave_activity">Leave Activity</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>


    <string name="long_placebo">“As he crossed toward the pharmacy at the corner he involuntarily turned his head because of a burst of light that had ricocheted from his temple, and saw, with that quick smile with which we greet a rainbow or a rose, a blindingly white parallelogram of sky being unloaded from the van—a dresser with mirrors across which, as across a cinema screen, passed a flawlessly clear reflection of boughs sliding and swaying not arboreally, but with a human vacillation, produced by the nature of those who were carrying this sky, these boughs, this gliding façade.”</string>
    <string name="placebo_s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="title_activity_maps">Map</string>
    <string name="question">Add question</string>
    <string name="option">Add option</string>
    <string name="edit_username">Username</string>
    <string name="edit_bio">Bio</string>
    <string name="edit_email_title">Change email address</string>
    <string name="edit_email">Email address</string>
    <string name="edit_phone_title">Change phone number</string>
    <string name="edit_phone">Phone number</string>
    <string name="edit_gender">Gender</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="specific_gender">Other</string>
    <string name="undisclosed_gender">Prefer not to disclose</string>
    <string name="specify_text">Specify&#8230;</string>
    <string name="rating">Rating</string>
    <string name="joined">Joined</string>
    <string name="review_entry_hint">Type your review</string>
    <string name="type_message">Type a message…</string>
    <string name="john_doe">John Doe</string>
    <string name="john_doe123">johnDoe123</string>
    <string name="map_fragment">MapFragment</string>
    <string name="location_error_fragment">LocationErrorFragment</string>
    <string name="enable">Enable</string>
    <string name="character_heading">Characters</string>
    <string name="ping_text_fragment">FragmentPingText</string>

    <string name="splash_fragment">SplashFragment</string>
    <string name="sign_up_tab">Sign up</string>
    <string name="login_tab">Login</string>

    <string name="loginInviteText"><![CDATA[Already have an account?<span style="color:#28a8ff"><b> Login</b></span>]]></string>
    <string name="signUpInviteText"><![CDATA["Don't" have an account?<span style="color:#28a8ff"><b> Sign up</b></span>]]></string>

    <string name="forgot_password_fragment">ForgotPasswordFragment</string>
    <string name="fp_slide_alpha_fragment">FPSlideAFragment</string>
    <string name="fp_slide_username_fragment">FPSlideUsernameFragment</string>
    <string name="fp_slide_phone_fragment">FPSlidePhoneFragment</string>
    <string name="fp_slide_email_fragment">FPSlideEmailFragment</string>
    <string name="fp_slide_beta_fragment">FPSlideBetaFragment</string>
    <string name="on_boarding_screen_opened_key">com.volunteerX.app.OnBoarding_Screen_Opened_Key</string>
    <string name="saved_on_boarding_key">isOnBoardingOpened</string>
    <string name="error_placebo">if a run-time error occurs, control branches to the specified line.</string>
    <string name="media_volume_key">Media_Volume_Key</string>
    <string name="network_error">Please check your internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="unread_messages">%1$d unread</string>
    <string name="timestamp_today">Today at %1$s</string>
    <string name="remove">Remove</string>
    <string name="suggestions">Suggestions for you</string>
    <string name="fragment_act_recommended">FragmentActRecommended</string>
    <string name="more_value">+%1$d</string>
    <string name="followers_static">%1$s followers</string>
    <string name="by_creator">By %1$s</string>
    <string name="poll_max_length">%1$d/30</string>
    <string name="rating_5">%1$f/5</string>
    <string name="tab_review">Review</string>
    <string name="tab_about">About</string>
    <string name="tab_event">Events</string>

    <string name="fragment_ex_character">ExCharacterFragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_bio">Add Bio</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="activities">Activities</string>
    <string name="post">Post</string>

</resources>
