<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Amil Muhammed Hamza on 12/25/19 9:32 PM
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 9/7/19 2:04 AM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/edit_close"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_close" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="Done"
            android:textColor="@color/coloVLFont"
            android:textSize="18sp" />

    </RelativeLayout>

    <!--Gender-->
    <LinearLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_gender"
            android:textSize="25sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/female_gender"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/male_gender"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/specific_gender"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/specify_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/specify_text"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_undisclosed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/undisclosed_gender"
                android:textSize="20sp" />

        </RadioGroup>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>