<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Amil Muhammed Hamza on 1/23/20 8:08 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 1/23/20 8:08 PM
  ~  */
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fernando_nunes"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/john_doe"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/john_doe123"
            android:gravity="center"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@color/colorBlack"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>