<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:paddingVertical="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingHorizontal="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activity_dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/created_onTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/created_on"
                android:textColor="@color/colorFeedStats"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/created_on_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="12 Jan 2021"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/joined_staticTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/joined_by"
                android:textColor="@color/colorFeedStats"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/joined_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="12K"
                android:textSize="13sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/join_btn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_border_5dp"
        android:backgroundTint="@color/colorBlack"
        android:text="@string/join"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/activity_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_dp" />


</androidx.constraintlayout.widget.ConstraintLayout>