<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Amil Muhammed Hamza on 1/21/20 8:24 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 1/21/20 8:24 PM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/parent_layout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/car_wan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="@+id/profile_picture">

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorDarkFontMajor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@docren155"
            android:textColor="@color/coloVLFont"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:visibility="visible"
            android:id="@+id/follow_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_border_5dp"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:visibility="gone"
            android:id="@+id/remove_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/stroke_border_background_5_1"
            android:text="@string/remove"
            android:textAllCaps="false"
            android:textColor="#B8B8B8"
            android:textStyle="bold" />


        <ImageView
            android:visibility="visible"
            android:id="@+id/ellipse_menu"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_ellipses"
            android:layout_marginStart="5dp"
            android:padding="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>